# landuse-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  pyproject.toml  test_soil_demo.py
.github/workflows/: publish.yml
examples/: soil_demo.py
src/landuse_mcp/: __init__.py  main.py
tests/: test_api.py
